fix(formatting): run yarn format

--- a/src/pages/components/data-table/code.mdx
+++ b/src/pages/components/data-table/code.mdx
@@ -86,7 +86,8 @@ usage documentation, see the Storybooks for each framework below.
       label: 'With batch actions',
     },
   ]}
-  scope={{ rowData, headerData, React, Delete, Save, Download }}>
+  scope={{ rowData, headerData, React, Delete, Save, Download }}
+>
   <ComponentVariant
     id="default-table"
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
@@ -99,7 +100,8 @@ usage documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}>
+    }}
+  >
     {`<DataTable rows={rowData} headers={headerData}>
   {({ rows, headers, getHeaderProps, getTableProps }) => (
     <TableContainer title="DataTable">
@@ -139,7 +141,8 @@ usage documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}>
+    }}
+  >
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
@@ -188,7 +191,8 @@ usage documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
-    }}>
+    }}
+  >
     {`<DataTable
   rows={rowData}
   headers={headerData}>
@@ -237,7 +241,8 @@ usage documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}>
+    }}
+  >
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
