--- a/src/pages/components/dropdown/code.mdx
+++ b/src/pages/components/dropdown/code.mdx
@@ -81,7 +81,8 @@ documentation, see the Storybooks for each framework below.
       label: 'Filterable multiselect',
     },
   ]}
-  scope={{ items }}>
+  scope={{ items }}
+>
   <ComponentVariant
     id="default-dropdown"
     knobs={{
@@ -96,7 +97,8 @@ documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
-    }}>{`
+    }}
+  >{`
     <Dropdown
       ariaLabel="Dropdown"
       id="carbon-dropdown-example"
@@ -119,7 +121,8 @@ documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
-    }}>{`
+    }}
+  >{`
     <ComboBox
       ariaLabel="ComboBox"
       id="carbon-combobox-example"
@@ -142,7 +145,8 @@ documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
-    }}>{`
+    }}
+  >{`
     <MultiSelect
       ariaLabel="MultiSelect"
       id="carbon-multiselect-example"
@@ -162,7 +166,8 @@ documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
-    }}>{`
+    }}
+  >{`
     <MultiSelect.Filterable
       ariaLabel="Filterable MultiSelect"
       id="carbon--filterable-multiselect-example"
