--- a/src/pages/components/structured-list/code.mdx
+++ b/src/pages/components/structured-list/code.mdx
@@ -73,7 +73,8 @@ code usage documentation, see the Storybooks for each framework below.
       label: 'Selectable structured list',
     },
   ]}
-  scope={{ CheckmarkFilled16 }}>
+  scope={{ CheckmarkFilled16 }}
+>
   <ComponentVariant
     id="default-structured-list"
     links={{
@@ -85,7 +86,8 @@ code usage documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
-    }}>{`
+    }}
+  >{`
     <StructuredListWrapper ariaLabel="Structured list">
       <StructuredListHead>
         <StructuredListRow
@@ -140,7 +142,8 @@ code usage documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
-    }}>{`
+    }}
+  >{`
     <StructuredListWrapper selection ariaLabel="Structured list">
       <StructuredListHead>
         <StructuredListRow
