--- a/src/pages/components/structured-list/usage.mdx
+++ b/src/pages/components/structured-list/usage.mdx
@@ -34,7 +34,8 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
       label: 'Selectable structured list',
     },
   ]}
-  scope={{ CheckmarkFilled16 }}>
+  scope={{ CheckmarkFilled16 }}
+>
   <ComponentVariant
     id="default-structured-list"
     links={{
@@ -46,7 +47,8 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
-    }}>{`
+    }}
+  >{`
     <StructuredListWrapper ariaLabel="Structured list">
       <StructuredListHead>
         <StructuredListRow
@@ -101,7 +103,8 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
-    }}>{`
+    }}
+  >{`
     <StructuredListWrapper selection ariaLabel="Structured list">
       <StructuredListHead>
         <StructuredListRow
