--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -77,7 +77,8 @@ documentation, see the Storybooks for each framework below.
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}>
+  scope={{ Filter16 }}
+>
   <ComponentVariant
     id="tooltip"
     links={{
@@ -89,7 +90,8 @@ documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
-    }}>{`
+    }}
+  >{`
     <Tooltip
       direction="bottom"
       tabIndex={0}
@@ -120,7 +122,8 @@ documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
-    }}>{`
+    }}
+  >{`
     <TooltipIcon
       tooltipText="Filter"
     >
@@ -141,7 +144,8 @@ documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
-    }}>{`
+    }}
+  >{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
     >
