--- a/src/pages/community/patterns/remove-pattern/index.mdx
+++ b/src/pages/community/patterns/remove-pattern/index.mdx
@@ -191,8 +191,7 @@ the user through the optional passive modal.
 
 <Caption>
   {' '}
-  Use a success modal to show that a delete request has been made / is in
-  progress.
+  Use a success modal to show that a delete request has been made / is in progress.
 </Caption>
 
 ![Example of a remove successful modal](images/DoneMedium.png)
@@ -214,8 +213,8 @@ completed. This is useful when the action takes more than a few moments.
 
 <Caption>
   {' '}
-  An optional notification can be used to confirm the delete or remove action
-  with medium or high impact actions.
+  An optional notification can be used to confirm the delete or remove action with
+  medium or high impact actions.
 </Caption>
 
 </Column>
