--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -75,7 +75,8 @@ your framework of choice.
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="Carbon Svelte"
-    href="https://github.com/IBM/carbon-components-svelte">
+    href="https://github.com/IBM/carbon-components-svelte"
+  >
     <MdxIcon name="github" />
   </ResourceCard>
 </Column>
