--- a/src/pages/guidelines/typography/overview.mdx
+++ b/src/pages/guidelines/typography/overview.mdx
@@ -1,6 +1,9 @@
 ---
 label:
-  Our approach to the typographic system uses IBM Plex as its typeface. It has been carefully engineered with suitable scales, styles, and weights to help create clear hierarchies and organize information that guides users through IBM products or experiences.
+  Our approach to the typographic system uses IBM Plex as its typeface. It has
+  been carefully engineered with suitable scales, styles, and weights to help
+  create clear hierarchies and organize information that guides users through
+  IBM products or experiences.
 title: Typography
 description:
   Typography can help create clear hierarchies, organize information, and guide
@@ -13,7 +16,10 @@ import TypeWeight from '../../../../src/components/TypeWeight';
 
 <PageDescription>
 
-Our approach to the typographic system uses IBM Plex as its typeface. It has been carefully engineered with suitable scales, styles, and weights to help create clear hierarchies and organize information that guides users through IBM products or experiences.
+Our approach to the typographic system uses IBM Plex as its typeface. It has
+been carefully engineered with suitable scales, styles, and weights to help
+create clear hierarchies and organize information that guides users through IBM
+products or experiences.
 
 </PageDescription>
 
@@ -56,7 +62,8 @@ are implemented in code. The productive type set uses fixed headings. Expressive
 headings are responsive and the type styles change size at different
 breakpoints.
 
-For more detail, see [Styling strategies](/guidelines/typography/styling-strategies/) and
+For more detail, see
+[Styling strategies](/guidelines/typography/styling-strategies/) and
 [Type sets](/guidelines/typography/type-sets/).
 
 ## Typeface: IBM Plex
@@ -93,7 +100,7 @@ The IBM type scale is built on a single equation. The formula for our scale was
 created to provide hierarchy for all types of experiences. The formula assumes
 that y₀=12 px.
 
-<br/>
+<br />
 
 <TypeScaleTable />
 
