--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -1,6 +1,9 @@
 ---
 label:
-  Carbon uses clear naming approach and type tokens to manage typography across complex and layered layouts and patterns, and these tokens sit within two type sets: expressive and productive.
+  ? Carbon uses clear naming approach and type tokens to manage typography
+    across complex and layered layouts and patterns, and these tokens sit within
+    two type sets
+  : expressive and productive.
 title: Typography
 description:
   The productive and expressive type sets support designers creating for a full
@@ -12,7 +15,9 @@ import TypesetStyle from 'components/TypesetStyle';
 
 <PageDescription>
 
-Carbon uses a clear naming approach and type tokens to manage typography across complex and layered layouts and patterns, and these tokens sit within two type sets: expressive and productive.
+Carbon uses a clear naming approach and type tokens to manage typography across
+complex and layered layouts and patterns, and these tokens sit within two type
+sets: expressive and productive.
 
 </PageDescription>
 
