--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -114,7 +114,8 @@ function MyComponent() {
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="@carbon/react docs"
-      href="https://github.com/carbon-design-system/carbon/tree/main/packages/carbon-react">
+      href="https://github.com/carbon-design-system/carbon/tree/main/packages/carbon-react"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
@@ -203,28 +204,32 @@ of mixins and design tokens using the Carbon tutorial.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="@carbon/styles docs"
-      href="https://github.com/carbon-design-system/carbon/tree/main/packages/styles">
+      href="https://github.com/carbon-design-system/carbon/tree/main/packages/styles"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Migrating from node-sass to dart-sass"
-      href="https://sass-lang.com/blog/libsass-is-deprecated#how-do-i-migrate">
+      href="https://sass-lang.com/blog/libsass-is-deprecated#how-do-i-migrate"
+    >
       <MdxIcon name="sass" />
     </ResourceCard>
   </Column>
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="One quick way to get ready for Carbon v11"
-      href="https://medium.com/carbondesign/migrating-from-node-sass-to-sass-eba9db004a3a">
+      href="https://medium.com/carbondesign/migrating-from-node-sass-to-sass-eba9db004a3a"
+    >
       <MdxIcon name="medium" />
     </ResourceCard>
   </Column>
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Discover mixins using the Carbon tutorial"
-      href="https://github.com/carbon-design-system/carbon-tutorial/blob/v11-react-step-5/src/content/LandingPage/_landing-page.scss">
+      href="https://github.com/carbon-design-system/carbon-tutorial/blob/v11-react-step-5/src/content/LandingPage/_landing-page.scss"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
@@ -260,7 +265,8 @@ To view a full table of v10 color tokens and their v11 equivalent, check out our
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Color tokens migration table"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
@@ -395,14 +401,16 @@ Some usage guidelines to keep in mind when migrating are:
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="CSS Grid docs"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-grid.md">
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-grid.md"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="CSS Grid storybook"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-grid.md">
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-grid.md"
+    >
       <MdxIcon name="react" />
     </ResourceCard>
   </Column>
@@ -489,21 +497,24 @@ of the Carbon Tutorial to see theming in action.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Theme usage example"
-      href="https://github.com/carbon-design-system/carbon-tutorial/blob/v11-react-step-5/src/App.js">
+      href="https://github.com/carbon-design-system/carbon-tutorial/blob/v11-react-step-5/src/App.js"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Theme component docs"
-      href="https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Theme/Theme.mdx">
+      href="https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Theme/Theme.mdx"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Layer component docs"
-      href="https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Layer/Layer.mdx">
+      href="https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Layer/Layer.mdx"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
@@ -656,7 +667,8 @@ Learn more about our Popover component and it's API below:
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Popover"
-      href="https://github.com/carbon-design-system/carbon/tree/main/packages/react/src/components/Popover">
+      href="https://github.com/carbon-design-system/carbon/tree/main/packages/react/src/components/Popover"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
@@ -725,14 +737,16 @@ notifications to closed by pressing the `escape` key. For more details, see the
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Notification usage examples"
-      href="https://carbon-react-next.netlify.app/?path=/story/components-notifications--toast">
+      href="https://carbon-react-next.netlify.app/?path=/story/components-notifications--toast"
+    >
       <MdxIcon name="storybook" />
     </ResourceCard>
   </Column>
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Notification accessibility page"
-      href="https://v11.carbondesignsystem.com/components/notification/accessibility">
+      href="https://v11.carbondesignsystem.com/components/notification/accessibility"
+    >
       <MdxIcon name="bee" />
     </ResourceCard>
   </Column>
