--- a/src/pages/patterns/overflow-content/index.mdx
+++ b/src/pages/patterns/overflow-content/index.mdx
@@ -160,7 +160,8 @@ example in CodePen shows how it is implemented.
       frameborder="no"
       allowtransparency="true"
       allowfullscreen="true"
-      style="width: 100%;">
+      style="width: 100%;"
+    >
       See the Pen{' '}
       <a href="https://codepen.io/team/carbon/pen/KRoBQe/">Middle Truncation</a>{' '}
       by Carbon Design System (<a href="https://codepen.io/carbon">@carbon</a>)
