--- a/src/pages/components/UI-shell-right-panel/usage.mdx
+++ b/src/pages/components/UI-shell-right-panel/usage.mdx
@@ -28,7 +28,8 @@ interaction patterns that persist between and across products.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="UI Shell template"
-      href="https://sketch.cloud/s/EjVmA">
+      href="https://sketch.cloud/s/EjVmA"
+    >
       <MdxIcon name="sketch" />
     </ResourceCard>
   </Column>
