--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -88,7 +88,8 @@ functionality—dropdown, multiselect, and combo box.
       label: 'Filterable multiselect',
     },
   ]}
-  scope={{ items }}>
+  scope={{ items }}
+>
   <ComponentVariant
     id="default-dropdown"
     knobs={{
@@ -103,7 +104,8 @@ functionality—dropdown, multiselect, and combo box.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
-    }}>{`
+    }}
+  >{`
     <Dropdown
       ariaLabel="Dropdown"
       id="carbon-dropdown-example"
@@ -126,7 +128,8 @@ functionality—dropdown, multiselect, and combo box.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
-    }}>{`
+    }}
+  >{`
     <ComboBox
       ariaLabel="ComboBox"
       id="carbon-combobox-example"
@@ -149,7 +152,8 @@ functionality—dropdown, multiselect, and combo box.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
-    }}>{`
+    }}
+  >{`
     <MultiSelect
       ariaLabel="MultiSelect"
       id="carbon-multiselect-example"
@@ -169,7 +173,8 @@ functionality—dropdown, multiselect, and combo box.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
-    }}>{`
+    }}
+  >{`
     <MultiSelect.Filterable
       ariaLabel="Filterable MultiSelect"
       id="carbon--filterable-multiselect-example"
