--- a/src/pages/guidelines/typography/code.mdx
+++ b/src/pages/guidelines/typography/code.mdx
@@ -1,6 +1,8 @@
 ---
 label:
-  Type is a core part of any offering and critical to how brands express and communicate throughout any experience. Use the Carbon type package to leverage IBM Plex and create effective typography across your products more easily.
+  Type is a core part of any offering and critical to how brands express and
+  communicate throughout any experience. Use the Carbon type package to leverage
+  IBM Plex and create effective typography across your products more easily.
 title: Typography
 description:
   Typography can help create clear hierarchies, organize information, and guide
@@ -10,7 +12,9 @@ tabs: ['Overview', 'Styling strategies', 'Type sets', 'Code']
 
 <PageDescription>
 
-Type is a core part of any offering and critical to how brands express and communicate throughout any experience. Use the Carbon type package to leverage IBM Plex and create effective typography across your products more easily.
+Type is a core part of any offering and critical to how brands express and
+communicate throughout any experience. Use the Carbon type package to leverage
+IBM Plex and create effective typography across your products more easily.
 
 </PageDescription>
 
