--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -40,7 +40,8 @@ along to see other work in progress and learn that way.
   <Button
     kind="tertiary"
     renderIcon={ArrowRight16}
-    href="https://ec.yourlearning.ibm.com/w3/series/10163237">
+    href="https://ec.yourlearning.ibm.com/w3/series/10163237"
+  >
     Subscribe
   </Button>
 </Row>
@@ -69,7 +70,8 @@ requirements, and determine next steps on requested components or functionality.
   <Button
     kind="tertiary"
     renderIcon={ArrowRight16}
-    onClick={() => (window.location.href = 'mailto:iliadm@ca.ibm.com')}>
+    onClick={() => (window.location.href = 'mailto:iliadm@ca.ibm.com')}
+  >
     Email us
   </Button>
 </Row>
@@ -98,7 +100,8 @@ release cycles to detect breaking changes.
   <Button
     kind="tertiary"
     renderIcon={ArrowRight16}
-    onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
+    onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}
+  >
     Email us
   </Button>
 </Row>
@@ -127,7 +130,8 @@ the big picture to the smallest detail! Usually two or more hours.
   <Button
     kind="tertiary"
     renderIcon={ArrowRight16}
-    onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
+    onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}
+  >
     Email us
   </Button>
 </Row>
